# FixMe

./: AUTHORS  FixMe  FixMe.desktop  FixMe.pro  FixMeForm.pro  README.md  TODO.md  coredumphook.h  fixmeform.cpp  index.html  main.cpp  mainwindow.ui  params.json
test/: Makefile  README.md  segfault.c  test_systemd_journal.c
test/qinotify/: README.md  qinotify.cpp  qinotify.pro
test/test_kcrash/: CMakeLists.txt  README.md  test_kcrash.cpp
